--- a/index.html
+++ b/index.html
@@ -274,7 +274,12 @@
             </figure>
         </div>
         </section>
-        <div class="last"></div>
+        <div class="last">
+            <p class="song">Я так люблю лежать на твоих коленях</p>
+            <p class="song"> Крепче обними меня, запомни мнгновение</p>
+            <p class="song">   На стекле рисуем сердце руками</p>
+            <p class="song">  Я люблю тебя, жаль что километры между нам</p>
+        </div>
     </main>
     
     <script>
